# csharp-cpp-test

./: .gitignore  CMakeLists.txt  README.md
ConsoleApp1/: ConsoleApp1.sln
ConsoleApp1/ConsoleApp1/: MyLib.cs  Program.cs
ConsoleApp1/ReadSvipTest/: Program.cs  ReadSvipTest.csproj
ConsoleApp1/SvipResolver/: Program.cs  QSvipLibrary.cs  SvipResolver.csproj
ConsoleApp1/XSAppModel/: Program.cs  Serialization.cs  XSAppModel.csproj
ConsoleApp1/XSAppModel/NrbfFormat/: NrbfLibrary.cs  NrbfLibraryImpl.cs  NrbfStream.cs  NrbfStreamImpl.cs
ConsoleApp1/XSAppModel/XStudio/: AppModel.cs  LineParam.cs  Note.cs  Overlappable.cs  ReverbPreset.cs  SongBeat.cs  SongTempo.cs  Track.cs  Vibrato.cs
MyLib/: CMakeLists.txt  mylib.cpp  mylib.h
